examples/kju/positive/control_flow/if_then_else.kju
fun write(a: Int): Unit import

fun kju():Unit{
	var x:Int=0;
	if true then {
		x=1;
	}
	else{
		x=2;
	};
	write(x);
}
